--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ publishDir = "docs"
 # Hero section (from here on is for icon theme)
 [params.hero]
   img = "images/hero_bg.jpg"
-  title = "Redux Credit Finance Pvt Ltd + RedCarpetUp.com "
+  title = "Redux Credit Finance & <br/> RedCarpetUp.com"
   description = "Transforming Credit In India"
 
 # Navigation section
@@ -48,7 +48,8 @@ publishDir = "docs"
     subtitle = "Transforming credit in India"
     description = "\
     <p>RedCarpetUp is also one of the innovative #MakeInIndia startups featured at GES 2017 by Department of Industrial Policy & Promotion and Niti Aayog and featured for Prime Minister Modi and Ivanka Trump on 28'th-29th Nov, 2017. We are proud that our hard work in the service of the nation is recognized by the Cabinet .</p> \
-    <ul class='checked'><li><a href='https://twitter.com/DIPPGOI/status/938345126526459905/photo/1'>Compliment for RedCarpet by the Govt of India</a></li><li></li><li>Pixel Perfect Design</li></ul><p><a href='#' class='btn btn-primary btn-outline fh5co-content-nav' data-nav-section='contact'>Get In Touch</a></p>"
+    <ul class='checked'><li><a href='https://twitter.com/DIPPGOI/status/938345126526459905/photo/1'>Compliment for RedCarpet by the Govt of India</a></li><li></li> \
+    <li><a href='https://github.com/redcarpetup'>Our contributions to the technical community</a> </li></ul><p><a href='#' class='btn btn-primary btn-outline fh5co-content-nav' data-nav-section='contact'>Get In Touch</a></p>"
 
   
 # Services section
