--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build && cp -r public docs",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
