--- a/src/pages/index/index.yaml
+++ b/src/pages/index/index.yaml
@@ -1,7 +1,7 @@
 #index page
 meta:
   title: Home
-  description: RedCarpet - Get Instant Credit
+  description: Redux - Loans for the new to credit
 
 header:
   - title_red: Loans for the
