--- a/src/pages/personal-loan/personal-loan.yaml
+++ b/src/pages/personal-loan/personal-loan.yaml
@@ -1,6 +1,6 @@
 meta:
   title: Personal Loan
-  description: RedCarpet - Get Instant Credit
+  description: Redux - Loans for the new to credit
 
 header:
   - title: Broke? Low on Funds? We are listening!
