--- a/src/pages/faq/faq.yaml
+++ b/src/pages/faq/faq.yaml
@@ -16,11 +16,11 @@ questions:
   - question: Why is my loan application rejected?
     answer: We calculate your credit score based on the information you provide , if the calculated credit score is less than our requirements, that might be the reason why your loan application is rejected.
   - question: How to use credit limit?
-    answer: If you are planning on purchasing high priced products and are worried about dipping into your savings, you don’t need to worry. You can use credit limit by taking personal loan from us. you can easily borrow the required funds and repay it within a fixed time, either in fixed instalments known as EMIs or monthly bills respectively.
+    answer: You can use your credit limit in your redcarpet card and in personal loans.
   - question: I lost my phone how can I pay my EMI?
     answer: You can call customer service and request to change your number.
   - question: How much is the Interest Rate for personal loan?
-    answer: Personal Loan Interest Rates is 16% to 36% per annum we charged for a personal loan based on the terms and conditions of Redux Finance and your credit score
+    answer: Personal Loan Interest Rates is 18% to 36% per annum we charged for a personal loan based on the terms and conditions of Redux Finance and your credit score
 	
 	# These will be shown only on faq page only
   - question: How to deactivate my account?
