credit to loan and remove playstore

--- a/src/pages/index/header.yaml
+++ b/src/pages/index/header.yaml
@@ -1,5 +1,5 @@
 #header
-- title: Take credit limit upto ₹1,00,000 for
+- title: Take loan limit upto ₹1,00,000 for
   description: TheSaaS is the world’s largest marketing automation platform. It’s like a second brain that helps millions of customers find their audience, engage their customers, and build their brand.
   image: vector18.png
 
