--- a/src/pages/personal-loan/personal-loan.yaml
+++ b/src/pages/personal-loan/personal-loan.yaml
@@ -1,6 +1,6 @@
 meta:
   title: Personal Loan
-  description: Redux - Loans for the new to credit
+  description: Redux - Loans for the new to loan
 
 header:
   - title: Broke? Low on Funds? We are listening!
