--- a/src/pages/faq/faq.yaml
+++ b/src/pages/faq/faq.yaml
@@ -1,7 +1,7 @@
 #faq
 meta:
   title: FAQ
-  description: Redux Credit Finance Private Limited
+  description: Redux Loan Finance Private Limited
 
 types:
   - type: General  
@@ -12,15 +12,15 @@ questions:
   - question: What is the eligibilty criteria?
     answer: To enroll with us you should be 18 years old and any individual who is salaried or has a monthly source of income.
   - question: What is required to receive a Loan?
-    answer: All you need is to login through valid Mobile Number and add bank account. In order to build your credit score, we will also request access to the data on your phone 
+    answer: All you need is to login through valid Mobile Number and add bank account. In order to build your loan score, we will also request access to the data on your phone 
   - question: Why is my loan application rejected?
-    answer: We calculate your credit score based on the information you provide , if the calculated credit score is less than our requirements, that might be the reason why your loan application is rejected.
-  - question: How to use credit limit?
-    answer: You can use your credit limit in your redcarpet card and in personal loans.
+    answer: We calculate your loan score based on the information you provide , if the calculated loan score is less than our requirements, that might be the reason why your loan application is rejected.
+  - question: How to use loan limit?
+    answer: You can use your loan limit in your redcarpet card and in personal loans.
   - question: I lost my phone how can I pay my EMI?
     answer: You can call customer service and request to change your number.
   - question: How much is the Interest Rate for personal loan?
-    answer: Personal Loan Interest Rates is 18% to 36% per annum we charged for a personal loan based on the terms and conditions of Redux Finance and your credit score
+    answer: Personal Loan Interest Rates is 18% to 36% per annum we charged for a personal loan based on the terms and conditions of Redux Finance and your loan score
 	
 	# These will be shown only on faq page only
   - question: How to deactivate my account?
