--- a/src/pages/index/index.yaml
+++ b/src/pages/index/index.yaml
@@ -1,11 +1,11 @@
 #index page
 meta:
   title: Home
-  description: Redux - Loans for the new to credit
+  description: Redux - Loans for the new to loan
 
 header:
   - title_red: Loans for the
-    title:  New to Credit
+    title:  New to Loan
     description: Get a loan faster and more easier than a bank
     more: Powered by RedCarpet Engineering
     image: phone.png
@@ -24,12 +24,12 @@ features:
     image: ./phone-lateral.png
 
   - header: Ruby Card
-    description: Ruby card is our virtual  card use it anywhere just like a credit card.
-    icon: ti-credit-card
+    description: Ruby card is our virtual  card use it anywhere just like a loan card.
+    icon: ti-loan-card
 
   - header: Zeta Card
-    description: Zeta card is like a real credit card you can use it anywhere.
-    icon: ti-credit-card
+    description: Zeta card is like a real loan card you can use it anywhere.
+    icon: ti-loan-card
 
   - header: Personal Loans
     description: Get personal loans for any errand, anytime, anywherebuy anything you want from any ecommerce website
@@ -77,7 +77,7 @@ team_communication:
       image: ./10.png
 
     - title: Works wherever you go
-      description:  No need to save for something you really want to buy! And you don't have to depend on anyone else for it either.What you want to buy is your business and so is managing your finances. Get instant credit with RedCarpet.
+      description:  No need to save for something you really want to buy! And you don't have to depend on anyone else for it either.What you want to buy is your business and so is managing your finances. Get instant loan with RedCarpet.
       image: ./11.png
     
     - title: Everything in one place.
@@ -88,7 +88,7 @@ team_communication:
 
   methods:
     - title: RedCarpet Cards
-      icon: ti-credit-card
+      icon: ti-loan-card
       description: We provide Zeta card and Ruby card for all your loan card needs.
       iconClassname: fa fa-angle-right small-5 pl-1
       link: /smart-card
