--- a/src/pages/about/about.yaml
+++ b/src/pages/about/about.yaml
@@ -1,14 +1,14 @@
 Meta:
   title: About
-  description: Redux Loan Finance Pvt Ltd
+  description: Redux Credit Finance Pvt Ltd
 Header:
   - title: We lend where banks cannot see
-    description : Redux Loan Finance Pvt Ltd, a company incorporated under the Companies Act, 1956 (CIN:U67200HR2017PTC070839)  dated September 20, 2017.The Company is a wholly owned subsidiary of RedCarpet Tech Pvt Ltd (RedCarpet) and is registered as a NBFC with the RBI under provisional CoR 331/14.27.001/2018-2019. 
+    description : Redux Credit Finance Pvt Ltd, a company incorporated under the Companies Act, 1956 (CIN:U67200HR2017PTC070839)  dated September 20, 2017.The Company is a wholly owned subsidiary of RedCarpet Tech Pvt Ltd (RedCarpet) and is registered as a NBFC with the RBI under provisional CoR 331/14.27.001/2018-2019. 
 
 founder:
   - title: Servicing the nation through access to loan 
     image: ./5.jpg
   
-  - quote: Redux Loan Finance Pvt Ltd is professionally managed and shares the professional values and ethos of its parent and holding company RedCarpet Tech Pvt  Limited; It has acquired and maintained a reputation for reliability, transparency of operation and absolute integrity. A steady growth rate validates the trust that industry has reposed in the Company.
+  - quote: Redux Credit Finance Pvt Ltd is professionally managed and shares the professional values and ethos of its parent and holding company RedCarpet Tech Pvt  Limited; It has acquired and maintained a reputation for reliability, transparency of operation and absolute integrity. A steady growth rate validates the trust that industry has reposed in the Company.
   
 
