--- a/src/pages/faq/faq.yaml
+++ b/src/pages/faq/faq.yaml
@@ -1,7 +1,7 @@
 #faq
 meta:
   title: FAQ
-  description: Redux Loan Finance Private Limited
+  description: Redux Credit Finance Private Limited
 
 types:
   - type: General  
