--- a/src/pages/faq/faq.yaml
+++ b/src/pages/faq/faq.yaml
@@ -12,9 +12,9 @@ questions:
   - question: What is the eligibilty criteria?
     answer: To enroll with us you should be 18 years old and any individual who is salaried or has a monthly source of income.
   - question: What is required to receive a Loan?
-    answer: All you need is to login through valid Mobile Number and add bank account. In order to build your loan score, we will also request access to the data on your phone 
+    answer: All you need is to login through valid Mobile Number and add bank account. In order to build your credit score, we will also request access to the data on your phone 
   - question: Why is my loan application rejected?
-    answer: We calculate your loan score based on the information you provide , if the calculated loan score is less than our requirements, that might be the reason why your loan application is rejected.
+    answer: We calculate your credit score based on the information you provide , if the calculated credit score is less than our requirements, that might be the reason why your loan application is rejected.
   - question: How to use loan limit?
     answer: You can use your loan limit in your redcarpet card and in personal loans.
   - question: I lost my phone how can I pay my EMI?
