--- a/src/pages/about/about.yaml
+++ b/src/pages/about/about.yaml
@@ -1,5 +1,5 @@
 Meta:
-  title: About
+  title: About Us
   description: Redux Credit Finance Pvt Ltd
 Header:
   - title: We lend where banks cannot see
