--- a/src/pages/about/about.yaml
+++ b/src/pages/about/about.yaml
@@ -1,8 +1,8 @@
 Meta:
-  title: About Us
+  title: About
   description: Redux Credit Finance Pvt Ltd
 Header:
-  - title: We lend where banks cannot see
+  - title: We lend where banks cannot see it
     description : Redux Credit Finance Pvt Ltd, a company incorporated under the Companies Act, 1956 (CIN:U67200HR2017PTC070839)  dated September 20, 2017.The Company is a wholly owned subsidiary of RedCarpet Tech Pvt Ltd (RedCarpet) and is registered as a NBFC with the RBI under provisional CoR 331/14.27.001/2018-2019. 
 
 founder:
